Fix layout issues

--- a/contents/css/components/_table.scss
+++ b/contents/css/components/_table.scss
@@ -2,15 +2,18 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
-  display: flex;
+  display: grid;
   margin-bottom: 1em;
-  justify-content: flex-end;
-  &__item {
-    margin-left: .5em;
+  grid-gap: .5em;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  @media only screen
+  and (max-width : 424px) {          
+    margin-bottom: 0;
   }
 }
 
 table.table {
+  margin-bottom: 1em;
   @media only screen
   and (min-width : 424px) {      
     border-collapse: collapse;
@@ -20,7 +23,6 @@ table.table {
   @media only screen
   and (max-width : 425px) {
     display: block;
-    margin: 1em;
     tr {
       display: block;
       margin: 1em 0;
