--- a/contents/css/components/_titlebar.scss
+++ b/contents/css/components/_titlebar.scss
@@ -5,10 +5,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  &:not(.homepage) {
+  &:not(.no-nav) {
     @media only screen
     and (max-width : 425px) {
-      padding-left: 30px;
+      padding-left: 20px;
     }
   }
   // @media only screen
