--- a/contents/css/main.scss
+++ b/contents/css/main.scss
@@ -69,27 +69,13 @@ a {
   .lesson__list {
     padding-left: 20px;
   }
-  @media only screen
-  and (max-width : 768px) {
-    padding: 1em;
-  }
-  @media only screen
-  and (max-width : 425px) {
-    padding: 1em 1em 1em 30px;
-  }
 }
 
 .container {
-  // display: flex;
-  // justify-content: center;
   &__center {
-    // flex: 0 1 1170px;
     max-width: 1170px;
     margin: 0 auto;
-    @media only screen
-    and (max-width : 1170px) {
-      padding: 0 1em;
-    }
+    padding: 0 1em;
   }
 }
 
